--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudconvert": "^2.3.7",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "formidable": "^3.5.1",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
     "react": "^18",
