--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.1",
+    "html-pdf-node": "^1.0.8",
+    "mammoth": "^1.8.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.4"
