--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.4",
     "cloudconvert": "^2.3.7",
+    "emitter": "^0.0.5",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.1",
